[package]
authors = ["Miguel Ramos <miguel.ramos@websublime.dev>"]
edition = "2021"
name = "websublime_workspace-tools"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "2.16.8"
napi = { version = "2.16.7", default-features = false, features = ["napi9", "serde-json", "tokio_rt"] }
workspace-node-tools = "0.8.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
