[package]
authors = ["Miguel Ramos <miguel.ramos@websublime.dev>"]
edition = "2021"
name = "websublime_workspace-tools"
version = "1.0.1"
exclude = ["tests/*", "examples/*", "node_modules/*", "target/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "2.16.12"
napi = { version = "2.16.10", default-features = false, features = [
  "napi9",
  "serde-json",
  "tokio_rt",
] }
workspace-node-tools = { version = "2.0.1", features = ["napi", "napi-derive"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
